# calculus

./: .gitignore  Cargo.toml  Trunk.toml  build.sh
core/: Cargo.toml
core/src/: expression.rs  lib.rs  namespace.rs
docs/: CNAME  index.html  style-e2b06fe5d177a463.css  web-interface-3040b8ad018f8f47.js  web-interface-3040b8ad018f8f47_bg.wasm  web-interface-5770812cc6503c5c.js  web-interface-5770812cc6503c5c_bg.wasm  web-interface-6872882393217c8.js  web-interface-6872882393217c8_bg.wasm  web-interface-86157e418469056c.js  web-interface-86157e418469056c_bg.wasm  web-interface-a4b50329e343cdc6.js  web-interface-a4b50329e343cdc6_bg.wasm  web-interface-e6a000242a75e454.js  web-interface-e6a000242a75e454_bg.wasm
engine/: Cargo.toml
engine/src/: expression.rs  lib.rs  monomial.rs  namespace.rs
interface/: Cargo.toml
interface/src/: main.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
web-interface/: Cargo.toml  index.html  style.css
web-interface/src/: function_list.rs  graph.rs  lib.rs  math.rs
