# Copyright Rob Gage 2025

[package]
name = "web-interface"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
engine = { version = "0.0.0", path = "../engine" }
leptos = {  version = "0.8.14", features = ["csr"] }
plotters = "0.3.7"
plotters-canvas = "0.3.1"
syntax = { version = "0.0.0", path = "../syntax" }
tailwind_fuse = "0.3.2"
wasm-bindgen = "0.2.105"
web-sys = "0.3.82"
